# csgocheats

./: .gitignore  ARCHITECTURE.md  BUILD_AND_RUN.md  CHANGELOG.md  CMakeLists.txt  ESP_EXAMPLE.cpp  ESP_SYSTEM_README.md  ESP_UI_GUIDE.md  FIND_OFFSETS.md  FRAMEWORK_DESIGN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OFFSET_FINDER_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_CHECKLIST.md  README.md  RUNNING_IN_GAME.md  offset_dumper
include/: hooks.hpp
include/entity/: entity_manager.hpp
include/game/: game_structures.hpp
include/memory/: game_memory.hpp  internal_memory_reader.hpp  memory_reader.hpp  offset_finder.hpp  offset_manager.hpp  signature_scanner.hpp
include/overlay/: overlay.hpp  overlay_window.hpp
include/rendering/: dx11_renderer.hpp  esp_ui.hpp  imgui_renderer.hpp  opengl_renderer.hpp  renderer.hpp  ui_backend.hpp  visualizer.hpp
src/: dll_main.cpp  hooks.cpp  main.cpp  offset_finder_tool.cpp
src/entity/: entity_manager.cpp
src/memory/: game_memory.cpp  internal_memory_reader.cpp  memory_reader.cpp  offset_finder.cpp  offset_manager.cpp  signature_scanner.cpp
src/overlay/: overlay.cpp  overlay_window.cpp
src/rendering/: dx11_renderer.cpp  esp_ui.cpp  imgui_renderer.cpp  opengl_renderer.cpp  primitives.cpp  renderer.cpp  ui_backend.cpp  visualizer.cpp
tools/: file_scanner.cpp  offset_dumper.cpp
